# yoop

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  commitlint.config.js  release-please-config.json  rustfmt.toml
.github/workflows/: ci.yml  npm-publish.yml  release-please.yml
crates/localdrop-cli/: Cargo.toml
crates/localdrop-cli/src/: main.rs
crates/localdrop-cli/src/commands/: clipboard.rs  config.rs  diagnose.rs  history.rs  internal.rs  mod.rs  receive.rs  scan.rs  send.rs  share.rs  trust.rs  web.rs
crates/localdrop-core/: Cargo.toml
crates/localdrop-core/src/: error.rs  lib.rs
crates/localdrop-core/src/clipboard/: access.rs  linux_holder.rs  mod.rs  session.rs  watcher.rs
crates/localdrop-core/src/code/: mod.rs
crates/localdrop-core/src/config/: mod.rs
crates/localdrop-core/src/crypto/: identity.rs  mod.rs
crates/localdrop-core/src/discovery/: beacon.rs  hybrid.rs  mdns.rs  mod.rs
crates/localdrop-core/src/file/: mod.rs
crates/localdrop-core/src/preview/: mod.rs
crates/localdrop-core/src/protocol/: mod.rs
crates/localdrop-core/src/transfer/: mod.rs  resume.rs
crates/localdrop-core/src/trust/: mod.rs
crates/localdrop-core/src/web/: assets.rs  handlers.rs  mod.rs  sse.rs  state.rs
crates/localdrop-core/src/web/assets/: index.html
crates/localdrop-core/tests/: integration_transfer.rs  mdns_tests.rs  platform_tests.rs  resume_tests.rs
crates/localdrop-core/tests/common/: mod.rs
crates/yoop-cli/: Cargo.toml
crates/yoop-cli/src/: main.rs  ui.rs
crates/yoop-cli/src/commands/: clipboard.rs  completions.rs  config.rs  diagnose.rs  history.rs  mod.rs  receive.rs  scan.rs  send.rs  share.rs  sync.rs  trust.rs  tui.rs  update.rs  web.rs
crates/yoop-cli/src/tui/: action.rs  app.rs  event.rs  mod.rs  state.rs
crates/yoop-cli/src/tui/components/: clipboard_preview.rs  code_display.rs  code_input.rs  device_list.rs  file_browser.rs  file_list.rs  file_preview.rs  help_overlay.rs  ip_input.rs  mod.rs  nav_menu.rs  share_options.rs  spinner.rs  status_bar.rs  sync_events.rs
crates/yoop-cli/src/tui/layout/: minimal.rs  mod.rs  split.rs  tabs.rs
crates/yoop-cli/src/tui/session/: mod.rs  state_file.rs  watcher.rs
crates/yoop-cli/src/tui/theme/: dark.rs  light.rs  mod.rs
crates/yoop-cli/src/tui/views/: clipboard.rs  config.rs  devices.rs  history.rs  mod.rs  placeholder.rs  receive.rs  share.rs  sync.rs
crates/yoop-core/: Cargo.toml
crates/yoop-core/src/: error.rs  lib.rs
crates/yoop-core/src/clipboard/: access.rs  linux_holder.rs  mod.rs  session.rs  watcher.rs
crates/yoop-core/src/code/: mod.rs
crates/yoop-core/src/compression/: detector.rs  mod.rs  stats.rs  zstd_impl.rs
crates/yoop-core/src/config/: mod.rs
crates/yoop-core/src/connection/: mod.rs
crates/yoop-core/src/crypto/: identity.rs  mod.rs
crates/yoop-core/src/discovery/: beacon.rs  hybrid.rs  mdns.rs  mod.rs
crates/yoop-core/src/file/: mod.rs
crates/yoop-core/src/history/: mod.rs
crates/yoop-core/src/migration/: backup.rs  mod.rs  version.rs
crates/yoop-core/src/migration/migrations/: mod.rs  v0_1_to_v0_2.rs
crates/yoop-core/src/preview/: mod.rs
crates/yoop-core/src/protocol/: mod.rs
crates/yoop-core/src/qr/: mod.rs
crates/yoop-core/src/sync/: conflict.rs  engine.rs  index.rs  mod.rs  session.rs  watcher.rs
crates/yoop-core/src/transfer/: mod.rs  resume.rs  trusted.rs
crates/yoop-core/src/trust/: mod.rs
crates/yoop-core/src/update/: mod.rs  package_manager.rs  version_check.rs
crates/yoop-core/src/web/: error.rs  handlers.rs  mod.rs  state.rs
crates/yoop-core/src/web/assets/: app.js  index.html  style.css
crates/yoop-core/tests/: integration_transfer.rs  mdns_tests.rs  platform_tests.rs  resume_tests.rs  test_sync_session.rs  update_tests.rs
crates/yoop-core/tests/common/: mod.rs
npm/@sanchxt/yoop-darwin-arm64/: package.json
npm/@sanchxt/yoop-darwin-x64/: package.json
npm/@sanchxt/yoop-linux-arm64-gnu/: package.json
npm/@sanchxt/yoop-linux-x64-gnu/: package.json
npm/@sanchxt/yoop-linux-x64-musl/: package.json
npm/@sanchxt/yoop-win32-x64-msvc/: package.json
npm/yoop/: README.md  bin.js  package.json
scripts/: build-npm.sh  publish-npm.sh  sync-versions.js
tests/: README.md
