[package]
name = "localdrop-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for LocalDrop - cross-platform local network file sharing"
readme = "README.md"
keywords = ["file-sharing", "lan", "transfer", "local-network"]
categories = ["network-programming"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# TLS and crypto
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }

# Fast hashing
xxhash-rust = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Networking
socket2 = { workspace = true }

# File handling
walkdir = { workspace = true }
mime_guess = { workspace = true }
directories = { workspace = true }

# Image processing
image = { workspace = true }

# QR code
qrcode = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Hostname detection
hostname = { workspace = true }

# Web server (optional feature)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
rand = { workspace = true }
walkdir = { workspace = true }

[features]
default = []
web = ["dep:axum", "dep:tower", "dep:tower-http"]
full = ["web"]

[lints]
workspace = true
