[package]
name = "yoop-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Yoop - cross-platform local network file sharing"
readme = "README.md"
keywords = ["file-sharing", "lan", "transfer", "local-network"]
categories = ["network-programming"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# TLS and crypto
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# Fast hashing
xxhash-rust = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Networking
socket2 = { workspace = true }

# mDNS/DNS-SD discovery (optional)
mdns-sd = { workspace = true, optional = true }
flume = { workspace = true, optional = true }

# File handling
walkdir = { workspace = true }
mime_guess = { workspace = true }
directories = { workspace = true }

# Image processing
image = { workspace = true }

# Clipboard access
arboard = { workspace = true }

# QR code
qrcode = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Hostname detection
hostname = { workspace = true }

# Web server (optional feature)
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
zip = { workspace = true, optional = true }

# Linux-specific dependencies for clipboard holder
[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
rand = { workspace = true }
walkdir = { workspace = true }

[features]
default = ["mdns"]
mdns = ["dep:mdns-sd", "dep:flume"]
web = ["dep:axum", "dep:axum-extra", "dep:tower", "dep:tower-http", "dep:rust-embed", "dep:async-stream", "dep:futures", "dep:tokio-stream", "dep:tokio-util", "dep:zip"]
full = ["mdns", "web"]

[lints]
workspace = true
